--- a/spam_detection_DL.ipynb
+++ b/spam_detection_DL.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1gxQqC8gOuf7CEISFyqTu9_C8FLtX5I8m",
-      "authorship_tag": "ABX9TyPSJn+OWoh1DY2iQ9xbXDqi",
+      "authorship_tag": "ABX9TyMjj3TlR0+BCaz+3QDgIuWi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1224,7 +1224,16 @@
         "sns.countplot(x=spam_email['label'], ax=axes[1])\n",
         "\n",
         "# Spam emails has more data and more spam data available - can use downsampling and get a balanced amount of training data compared to spam_sms \n",
-        "# Spam SMS is more realistic as it has more 'real' messages than spam ones. Easier to process as well due to smaller dataset size "
+        "# Spam SMS is more realistic as it has more 'real' messages than spam ones. Easier to process as well due to smaller dataset size \n",
+        "\n",
+        "'''\n",
+        "- the spam email dataset has much more data, and also has more spam emails than normal ones. so a pro is that we can use downsampling quite safely as we'll still have about 25000 email records and can have a \n",
+        "balanced training dataset. however a con is that because the dataset size is huge and the information given is quite irregular in structure, there will be a lot of data cleaning/preprocessing and it will also be \n",
+        "time consuming to train the data.\n",
+        "\n",
+        "- the spam SMS dataset has much less data, totalling about 5500 records altogether. it is quite imbalanced, and there is more real SMS than spam SMS in the dataset, so we will either have to use SMOTE or \n",
+        "upsampling (which can give variable results). however, because it is smaller and more structured/somewhat cleaned already, there is less preprocessing to do and it won't take too long to train the data\n",
+        "'''"
       ],
       "metadata": {
         "colab": {
